# pgp-packet-library

./: .gitignore  .gitmodules  CMakeLists.txt  CppCheckSuppressions.txt  Dockerfile  README.md  array_signature_subpacket.h  basic_key.h  basic_secret_key.h  build-container.sh  clang_analyze.sh  compile-and-test-in-docker.sh  cppcheck.sh  curve_oid.cpp  curve_oid.h  decoder.cpp  decoder.h  dsa_public_key.cpp  dsa_public_key.h  dsa_secret_key.cpp  dsa_secret_key.h  dsa_signature.cpp  dsa_signature.h  dsa_signature_encoder.cpp  dsa_signature_encoder.h  ecdh_public_key.cpp  ecdh_public_key.h  ecdh_secret_key.cpp  ecdh_secret_key.h  ecdsa_public_key.cpp  ecdsa_public_key.h  ecdsa_secret_key.cpp  ecdsa_secret_key.h  ecdsa_signature.cpp  ecdsa_signature.h  ecdsa_signature_encoder.cpp  ecdsa_signature_encoder.h  eddsa_public_key.cpp  eddsa_public_key.h  eddsa_secret_key.cpp  (+65 more)
.github/: pull_request_template.md
.github/workflows/: macos.yml  ubuntu.yml
cmake/: pgp-packet-config.cmake
cmake/Modules/: FindLibGcrypt.cmake  Findsodium.cmake
cmake/tests/: std_variant_test.cpp
examples/: CMakeLists.txt  create_simple_packet.cpp  encoding_and_decoding.cpp  key_from_raw_data.cpp
include/: allocator.h  basic_key.h  basic_secret_key.h  compression_algorithm.h  curve_oid.h  decoder.h  decoder_traits.h  dsa_public_key.h  dsa_secret_key.h  dsa_signature.h  dsa_signature_encoder.h  ecdh_public_key.h  ecdh_secret_key.h  ecdsa_public_key.h  ecdsa_secret_key.h  ecdsa_signature.h  ecdsa_signature_encoder.h  eddsa_public_key.h  eddsa_secret_key.h  eddsa_signature.h  eddsa_signature_encoder.h  elgamal_public_key.h  elgamal_secret_key.h  expected_number.h  fixed_number.h  hash_encoder.h  key_algorithm.h  key_flag.h  multiprecision_integer.h  null_hash.h  packet.h  packet_tag.h  public_key.h  range_encoder.h  rsa_public_key.h  rsa_secret_key.h  rsa_signature.h  rsa_signature_encoder.h  secret_key.h  secure_object.h  (+11 more)
include/signature_subpacket/: embedded.h  fixed_array.h  issuer_fingerprint.h  key_flags.h  numeric.h  preferred_algorithms.h  unknown.h
include/util/: narrow_cast.h  span.h  to_lvalue.h  transaction.h  tuple.h  variant.h  vector.h
signature_subpacket/: key_flags.h  numeric.h  unknown.cpp  unknown.h
source/: curve_oid.cpp  decoder.cpp  dsa_public_key.cpp  dsa_secret_key.cpp  dsa_signature.cpp  dsa_signature_encoder.cpp  ecdh_public_key.cpp  ecdh_secret_key.cpp  ecdsa_public_key.cpp  ecdsa_secret_key.cpp  ecdsa_signature.cpp  ecdsa_signature_encoder.cpp  eddsa_public_key.cpp  eddsa_secret_key.cpp  eddsa_signature.cpp  eddsa_signature_encoder.cpp  elgamal_public_key.cpp  elgamal_secret_key.cpp  multiprecision_integer.cpp  packet.cpp  range_encoder.cpp  rsa_public_key.cpp  rsa_secret_key.cpp  rsa_signature.cpp  rsa_signature_encoder.cpp  signature.cpp  signature_subpacket_set.cpp  string_to_key.cpp  unknown_signature_encoder.cpp  user_id.cpp  variable_number.cpp
source/signature_subpacket/: embedded.cpp  issuer_fingerprint.cpp  unknown.cpp
tests/: CMakeLists.txt  device_random_engine.cpp  device_random_engine.h  generate.cpp  generate.h  key_template.cpp  key_template.h  main.cpp
tests/unit_tests/: array_signature_subpacket.cpp  curve_oid.cpp  decoder.cpp  device_random_engine.cpp  dsa_public_key.cpp  dsa_secret_key.cpp  dsa_signature.cpp  ecdh_public_key.cpp  ecdh_secret_key.cpp  ecdsa_public_key.cpp  ecdsa_secret_key.cpp  ecdsa_signature.cpp  eddsa_public_key.cpp  eddsa_secret_key.cpp  eddsa_signature.cpp  elgamal_public_key.cpp  elgamal_secret_key.cpp  expected_number.cpp  fixed_number.cpp  gcrypt_encoder.cpp  hash_encoder.cpp  key_flags_subpacket.cpp  multiprecision_integer.cpp  numeric_signature_subpacket.cpp  packet.cpp  public_key.cpp  range_encoder.cpp  rsa_public_key.cpp  rsa_secret_key.cpp  rsa_signature.cpp  secret_key.cpp  signature.cpp  signature_subpacket_set.cpp  unknown_signature.cpp  unknown_signature_subpacket.cpp  user_id.cpp  variable_number.cpp
tests/unit_tests/signature_subpacket/: embedded.cpp  fixed_array.cpp  issuer_fingerprint.cpp  key_flags.cpp  numeric.cpp  unknown.cpp
util/: transaction.h  tuple.h  value_restorer.h
